--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "@headlessui/react": "^1.6.5",
     "@heroicons/react": "^1.0.6",
+    "@portabletext/react": "^1.0.6",
+    "@sanity/image-url": "^1.0.1",
+    "@sanity/webhook": "^2.0.0",
     "next": "12.2.0",
+    "next-sanity": "^0.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
